2003-02-15  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: add new column displaying VM size. Patch by
	Jason A. Pfeil <jason@jasonpfeil.com>. Fixes bug #92977

	* callbacks.c: change Joergen's name to be in ascii and remove Eric
	since very little code of his actually remains

2003-02-12  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't update rows that arent' visible. Should be a slight
	performance increase especially for displays with a lot of processes

2003-02-12  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c, cellrenderer.c, callbacks.c: improved disks view tab from
	Jörgen Scheibengruber <mfcn@gmx.de>. Some small attempts
	to update the ui to hig standards.

	* procman.c: save the disk list setup to a new keyname

	* memmaps.c: don't allow reordering since the state is not saved

	* infoview: remove some frame lines

2002-11-25  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: don't strdup the username if it's NULL. Should fix
	bug #98471

2002-05-19  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: remove hack to catch bug that was a treeview bug

2002-05-15  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: return TRUE for the app_delete callback. 
	Should fix the crash on exit once and for all - bug #69493

2002-05-14  Anders Carlsson  <andersca@gnu.org>

	* prettytable.c: (pretty_table_new):
	Use the new multi-screen safe API.
	
2002-05-06  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am, interface.c: get help working with patch by
	John Fleck. Fixes bug #80639

2002-04-28 Dennis Cranston <dennis_cranston@yahoo.com>

	* callbacks.c:  add procman.png as the logo for the about 
	dialog.  change name to match the name in the application
	menu.

Mon Apr 29 11:44:14 2002  Owen Taylor  <otaylor@redhat.com>

	* interface.c (file1_menu_uiinfo): GNOMEUIINFO_MENU_EXIT_ITEM
	seems to have been recently deprecated; change to
	QUIT_ITEM, the current name.

2002-03-19  Kevin Vandersloot <kfv101@psu.edu>
