@@ -1,3 +1,7 @@
+2003-02-16  Kevin Vandersloot <kfv101@psu.edu>
+	
+	* memmaps.c: get sorting of ints correct
+
 2003-02-15  Kevin Vandersloot <kfv101@psu.edu>
 
 	* memmaps.c: add new column displaying VM size. Patch by
